src/tests/InvalidTests/OperationsDivideByZero.agl
a : Number = 3.0;
b : Number = a / 0; # Error: division by zero!
